# qualifier

./: .gitattributes  .gitignore  .qualignore  AGENTS.md  Cargo.toml  METABOX.md  README.md  SPEC.md
.cargo/: config.toml
.github/workflows/: deploy-site.yml
scripts/: build-wasm.sh  publish.sh  quality_gates.sh  release.sh  site.sh
site/: .gitignore  eleventy.config.js  index.md  package.json  pnpm-lock.yaml
site/_data/: site.json
site/_includes/: base.njk
site/css/: playground.css  scoring.css  style.css
site/examples/: qualifier.graph.jsonl  src-auth.rs.qual  src-parser.rs.qual
site/js/: playground.js  qualifier-core.js  scoring.js
site/pages/: cli.md  format.md  metabox.njk  scoring.njk  spec.njk
site/scripts/: dev.sh
site/wasm/: qualifier.js
src/: attestation.rs  compact.rs  graph.rs  lib.rs  qual_file.rs  scoring.rs
src/cli/: config.rs  mod.rs  output.rs
src/cli/commands/: attest.rs  blame.rs  check.rs  compact.rs  graph.rs  graph_cmd.rs  haiku.rs  init.rs  ls.rs  mod.rs  praise.rs  score.rs  show.rs
tests/: cli_integration.rs  integration.rs
