[package]
name = "qualifier"
version = "0.1.0"
edition = "2024"
description = "Deterministic quality attestations for software artifacts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/empathic-ai/qualifier"
readme = "README.md"
keywords = ["quality", "attestation", "code-review", "ci"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:comfy-table", "dep:figment"]

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }
comfy-table = { version = "7", optional = true }
figment = { version = "0.10", features = ["toml", "env"], optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "qualifier"
path = "src/bin/qualifier.rs"
required-features = ["cli"]
